2010-08-13 Pierre Wieser <pwieser@trychlos.org>

	* doc/api/nautilus-actions-sections.txt:
	* doc/api/nautilus-actions-docs.xml: New files.

	* src/io-desktop/nadp-desktop-file.c (nadp_desktop_file_set_locale_string):
	Write all available locales to have a chance another locale can get it.

	* Makefile.am:
	Build doc after src so that libraries are available when documenting them.

	* autogen.sh:
	* configure.ac: Implement gtk-doc and manuals generation.

	* doc/api/Makefile.am: Build gtk-doc for public API.

	* doc/nact/C/nact-conditions.xml:
	* doc/nact/C/nact-execution.xml:
	* doc/nact/C/nact-menus.xml:
	* doc/nact/C/nact-profiles.xml:
	* doc/nact/C/nact-sorting.xml:
	* doc/nact/C/nact-starting.xml:
	* doc/nact/C/nact-where.xml:
	* doc/nact/C/nautilus-actions-config-tool.xml:
	Update NACT user's manual.

	* doc/nact/Makefile.am: Implement manuals generation.

	* src/api/na-core-utils.h:
	* src/api/na-data-boxed.h:
	* src/api/na-data-types.h:
	* src/api/na-gconf-utils.h:
	* src/api/na-icontext.h:
	* src/api/na-iduplicable.h:
	* src/api/na-iimporter.h:
	* src/api/na-object-api.h:
	* src/api/na-object-id.h:
	* src/api/na-object-item.h:
	* src/core/na-core-utils.c:
	* src/core/na-data-boxed.c:
	* src/core/na-export-format.c:
	* src/core/na-export-format.h:
	* src/core/na-exporter.c:
	* src/core/na-exporter.h:
	* src/core/na-factory-object.c:
	* src/core/na-factory-object.h:
	* src/core/na-gconf-monitor.c:
	* src/core/na-gconf-utils.c:
	* src/core/na-iabout.h:
	* src/core/na-icontext.c:
	* src/core/na-ifactory-provider.c:
	* src/core/na-importer-ask.c:
	* src/core/na-io-provider.c:
	* src/core/na-iprefs.c:
	* src/core/na-object-id.c:
	* src/core/na-object-item.c:
	* src/core/na-object.c:
	* src/core/na-selected-info.c:
	* src/core/na-selected-info.h:
	Update comments to suits gtk-doc requirements.

	* COPYING-DOCS:
	* doc/nact/C/figures/nact-desktop-environment-frame.png:
	* doc/nact/C/figures/nact-exec-mode-frame.png:
	* doc/nact/C/figures/nact-execute-as-frame.png: