@@ -1,3 +1,8 @@
+2010-08-15 Pierre Wieser <pwieser@trychlos.org>
+
+	* src/core/na-object-profile.c (convert_pre_v3_parameters_str):
+	%f used to be the name of the file (a basename), converts it to %b.
+
 2010-08-13 Pierre Wieser <pwieser@trychlos.org>
 
 	* doc/api/nautilus-actions-sections.txt:
